--- a/wp-content/themes/wp-dashboard/package.json
+++ b/wp-content/themes/wp-dashboard/package.json
@@ -7,25 +7,26 @@
     "author": "INOVATIVE",
     "license": "ISC",
     "dependencies": {
-      "autoprefixer": "^10.4.0",
-      "browser-sync": "^2.27.7",
-      "del": "^6.0.0",
-      "gulp": "^4.0.2",
-      "gulp-clean-css": "^4.3.0",
-      "gulp-concat": "^2.6.1",
-      "gulp-postcss": "^9.0.1",
-      "gulp-purgecss": "^4.1.3",
-      "gulp-terser": "^2.1.0"
+        "@tailwindcss/forms": "^0.4.0",
+        "autoprefixer": "^10.4.0",
+        "browser-sync": "^2.27.7",
+        "del": "^6.0.0",
+        "gulp": "^4.0.2",
+        "gulp-clean-css": "^4.3.0",
+        "gulp-concat": "^2.6.1",
+        "gulp-postcss": "^9.0.1",
+        "gulp-purgecss": "^4.1.3",
+        "gulp-terser": "^2.1.0"
     },
     "devDependencies": {
-      "@babel/core": "^7.16.5",
-      "@babel/preset-env": "^7.16.5",
-      "gulp-babel": "^8.0.0",
-      "postcss": "^8.4.5",
-      "tailwindcss": "^3.0.7"
+        "@babel/core": "^7.16.5",
+        "@babel/preset-env": "^7.16.5",
+        "gulp-babel": "^8.0.0",
+        "postcss": "^8.4.5",
+        "tailwindcss": "^3.0.7"
     },
     "scripts": {
-      "dev": "gulp",
-      "build": "gulp prod"
+        "dev": "gulp",
+        "build": "gulp prod"
     }
-  }
+}
