--- a/wp-content/themes/wp-dashboard/package.json
+++ b/wp-content/themes/wp-dashboard/package.json
@@ -21,6 +21,7 @@
     "devDependencies": {
         "@babel/core": "^7.16.5",
         "@babel/preset-env": "^7.16.5",
+        "@tailwindcss/typography": "^0.5.1",
         "gulp-babel": "^8.0.0",
         "postcss": "^8.4.5",
         "tailwindcss": "^3.0.7"
